--- a/concerns.html
+++ b/concerns.html
@@ -1,3 +1,4 @@
+<!---
 <p> Not sure how to get students started </p>
 
 
@@ -14,7 +15,12 @@
 <p>then the sessions can act as clean up to bring students who might not be keeping up back in line with the overall schedule of progress.</p>
 
 <em><b>Potentially,</b> it might still be worth giving everyone the same ultra-basic dataset week 1 and having them work on a very simple dashboard for X amount of time so they can get a feel for the workflows, processes and coding knowledge before needing to face complex and potentially over-whelming datasets.</em>
-
+--->
 
 <h1>W/C Jan 26</h1>
 <p>Are students going to work on personal devices or server, ie do we need to install Shiny on stats3. I also wonder if it functions well from there as have never tried.</p>
+<p>Do you have any concerns with the direction this is going in?</p>
+<p>Anything you would like to see done before next time?</p>
+<p></p>
+<p></p>
+<p>I feel like the skeleton is close to being formed and enabling me to really start tying it all together in a way that feels natural and fluid.</p>
